# hermes-thoon

./: .gitignore  PLAN.md
.githooks/: pre-push
.github/workflows/: target-lib-check.yml  thoon-ci.yml  upstream-sync.yml
hermes-rust/: Cargo.toml  README.md
hermes-rust/hermes-core/: Cargo.toml
hermes-rust/hermes-core/src/: lib.rs
hermes-rust/hermes-fileops/: Cargo.toml
hermes-rust/hermes-fileops/src/: lib.rs
hermes-rust/hermes-msgproc/: Cargo.toml
hermes-rust/hermes-msgproc/src/: lib.rs
hermes-rust/hermes-sessiondb/: Cargo.toml
hermes-rust/hermes-sessiondb/src/: lib.rs
hermes-rust/hermes-toolreg/: Cargo.toml  pyproject.toml
hermes-rust/hermes-toolreg/src/: lib.rs
thoon/: .gitignore  Cargo.toml  README.md
thoon/hermes-thoon-fileops/: README.md  pyproject.toml
thoon/hermes-thoon-fileops/src/hermes_thoon_fileops/: __init__.py
thoon/hermes-thoon-msgproc/: README.md  pyproject.toml
thoon/hermes-thoon-msgproc/src/hermes_thoon_msgproc/: __init__.py
thoon/hermes-thoon-sessiondb/: README.md  pyproject.toml
thoon/hermes-thoon-sessiondb/src/hermes_thoon_sessiondb/: __init__.py
thoon/hermes-thoon-toolreg/: README.md  pyproject.toml
thoon/hermes-thoon-toolreg/src/hermes_thoon_toolreg/: __init__.py
thoon/thoon-core/: Cargo.toml  README.md
thoon/thoon-core/src/: lib.rs
thoon/thoon-fileops/: Cargo.toml  README.md
thoon/thoon-fileops/src/: lib.rs
thoon/thoon-sqlite/: Cargo.toml  README.md
thoon/thoon-sqlite/src/: lib.rs
thoon/thoon-toolreg/: Cargo.toml  README.md  pyproject.toml
thoon/thoon-toolreg/src/: lib.rs
