[package]
name = "hermes-sessiondb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Phase 3: SQLite + FTS5 session storage for the Hermes Agent."

[dependencies]
hermes-core = { path = "../hermes-core" }
