[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-thoon-fileops"
version = "0.1.0"
description = "Hermes plugin: faster file operations backed by thoon-fileops."
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    # "thoon-fileops>=0.1.0",  # uncomment when thoon-fileops ships
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Hermes Agent",
]

[project.urls]
Repository = "https://github.com/Gilamonster-Foundation/hermes-thoon"

[project.entry-points."hermes_agent.plugins"]
hermes_thoon_fileops = "hermes_thoon_fileops:register"

[tool.setuptools.packages.find]
where = ["src"]
