[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-thoon-msgproc"
version = "0.5.20260520"
description = "Hermes plugin (deferred): message processing acceleration."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Hermes Agent",
]

[project.urls]
Repository = "https://github.com/Gilamonster-Foundation/hermes-thoon"

[project.entry-points."hermes_agent.plugins"]
hermes_thoon_msgproc = "hermes_thoon_msgproc:register"

[tool.setuptools.packages.find]
where = ["src"]
