[package]
name = "thoon-toolreg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic concurrent tool registry primitive for Python LLM-agent frameworks."

[lib]
name = "thoon_toolreg"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace = true
thoon-core = { path = "../thoon-core" }
