[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "thoon-toolreg"
version = "0.5.20260520"
description = "Generic concurrent tool registry primitive for Python LLM-agent frameworks."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Repository = "https://github.com/Gilamonster-Foundation/hermes-thoon"

[tool.maturin]
module-name = "thoon_toolreg"
features = ["pyo3/extension-module"]
strip = true
